2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Clipboard.cs: Use the new PasteChild method, since
	  ReplaceChild is now protected.
	* libsteticui/Glade.cs: Don't try to resolve references when loading a
	  glade file.
	* libsteticui/libsteticui.dll.config, libstetic/libstetic.dll.config:
	  Added dlls maps for MacOSX
	* libstetic/wrapper/Button.cs, libstetic/wrapper/CheckButton.cs: Set
	  UseUnderline = true by default.
	* libstetic/wrapper/Container.cs: Made ReplaceChild protected. Make
	  sure widgets copied from clipboard are properly registered in the
	  undo system.
	* libstetic/wrapper/Paned.cs, libstetic/wrapper/Box.cs,
	  libstetic/wrapper/Frame.cs, libstetic/wrapper/Fixed.cs,
	  libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/Toolbar.cs,
	  libstetic/wrapper/Notebook.cs, libstetic/wrapper/Expander.cs: Made
	  ReplaceChild protected.
	* libstetic/wrapper/ComboBoxEntry.cs: Fix code generation issue for
	  text combo box.
	* libstetic/wrapper/objects.xml: Added UseUnderline property to
	  CheckButton.
	* libstetic/DND.cs: Use the native format for copy/paste widgets.

2007-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CodeGenerator.cs,
	  libsteticui/CodeGeneratorInternalClass.cs,
	  libsteticui/CodeGeneratorPartialClass.cs: Make sure the globla
	  Initialization is called from internal and partial classes.
	* libstetic/editor/ActionMenuItem.cs,
	  libstetic/editor/ActionToolItem.cs: Fix compilation conflict with
	  recent gtk# versions.

2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesigner.cs: Avoid disposing twice the designer.

2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs, libsteticui/ProjectBackend.cs,
	  libsteticui/Application.cs: Fixed problem when updating project
	  libraries. Make sure referenced libraries are not unloaded when
	  they are still needed.
	* libsteticui/CecilWidgetLibrary.cs: Null check.
