@@ -1,11 +1,13 @@
 #!/bin/sh
 # Run this to generate all the initial makefiles, etc.
+# Ripped off from GNOME macros version
 
-srcdir=`dirname $0`
-test -z "$srcdir" && srcdir=.
+DIE=0
 
 PKG_NAME="stetic"
-REQUIRED_AUTOMAKE_VERSION=1.6
+WANT_AUTOCONF="2.5"
+srcdir=`dirname $0`
+test -z "$srcdir" && srcdir=.
 
 test -f $srcdir/stetic/Stetic.cs || {
     echo -n "**Error**: Directory "\`$srcdir\'" does not look like the"
@@ -13,8 +15,85 @@ test -f $srcdir/stetic/Stetic.cs || {
     exit 1
 }
 
-which gnome-autogen.sh || {
-    echo "You need to install gnome-common from GNOME CVS"
-    exit 1
+(autoconf --version) < /dev/null > /dev/null 2>&1 || {
+  echo
+  echo "**Error**: You must have \`autoconf' installed to compile Stetic."
+  echo "Download the appropriate package for your distribution,"
+  echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
+  DIE=1
 }
-USE_GNOME2_MACROS=1 . gnome-autogen.sh
+
+(automake --version) < /dev/null > /dev/null 2>&1 || {
+  echo
+  echo "**Error**: You must have \`automake' installed to compile Stetic."
+  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
+  echo "(or a newer version if it is available)"
+  DIE=1
+  NO_AUTOMAKE=yes
+}
+
+(intltoolize --version) < /dev/null > /dev/null 2>&1 || {
+  echo
+  echo "**Error**: You must have \`intltoolize' installed to compile Stetic."
+  DIE=1
+}
+
+# if no automake, don't bother testing for aclocal
+test -n "$NO_AUTOMAKE" || (aclocal --version) < /dev/null > /dev/null 2>&1 || {
+  echo
+  echo "**Error**: Missing \`aclocal'."
+  DIE=1
+}
+
+if test "$DIE" -eq 1; then
+  exit 1
+fi
+
+if test -z "$*"; then
+  echo "**Warning**: I am going to run \`configure' with no arguments."
+  echo "If you wish to pass any to it, please specify them on the"
+  echo \`$0\'" command line."
+  echo
+fi
+
+case $CC in
+xlc )
+  am_opt=--include-deps;;
+esac
+
+echo "Running glib-gettextize ..."
+glib-gettextize --force --copy ||
+  { echo "**Error**: glib-gettextize failed."; exit 1; }
+
+echo "Running intltoolize ..."
+intltoolize --force --copy --automake ||
+  { echo "**Error**: intltoolize failed."; exit 1; }
+
+echo "Running aclocal $ACLOCAL_FLAGS ..."
+aclocal $ACLOCAL_FLAGS || {
+  echo
+  echo "**Error**: aclocal failed. This may mean that you have not"
+  echo "installed all of the packages you need, or you may need to"
+  echo "set ACLOCAL_FLAGS to include \"-I \$prefix/share/aclocal\""
+  echo "for the prefix where you installed the packages whose"
+  echo "macros were not found"
+  exit 1
+}
+
+echo "Running automake --gnu $am_opt ..."
+automake --add-missing --gnu $am_opt ||
+  { echo "**Error**: automake failed."; exit 1; }
+
+echo "Running autoconf ..."
+WANT_AUTOCONF="2.5" autoconf || { echo "**Error**: autoconf failed."; exit 1; }
+
+
+conf_flags="--enable-maintainer-mode --enable-compile-warnings"
+
+if test x$NOCONFIGURE = x; then
+  echo Running $srcdir/configure $conf_flags "$@" ...
+  $srcdir/configure $conf_flags "$@" \
+  && echo Now type \`make\' to compile $PKG_NAME || exit 1
+else
+  echo Skipping configure process.
+fi
