@@ -1,3 +1,7 @@
+2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* autogen.sh: Removed gnome-common dependency.
+
 2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/Clipboard.cs: Use the new PasteChild method, since
